[package]
name = "usock"
version = "0.1.0"
authors = ["Yacobus Reinhart <yacobus.reinhart@gmail.com>"]

[dependencies]
log = "0.3"
config = "0.7"
walkdir = "1.0"
getopts = "0.2"
serde_derive = "1.0"
serde = "1.0"
url = "1.5.1"
httparse = "1.2"
openssl = "0.9"
rust-crypto = "^0.2"
chrono = "0.4"
hex = "0.2"
bson = "0.10"
mongodb = { git = "https://github.com/mongodb-labs/mongo-rust-driver-prototype", tag = "0.3.8" }
serde_json = "1.0"
sidekiq = "0.8.2"
dotenv = "0.13.0"
r2d2_redis = "0.8"
redis = "0.9"

[dependencies.log4rs]
version = "0.7"
features = ["json_encoder"]

[dependencies.log-panics]
version = "1.1"
features = ["with-backtrace"]

[dependencies.ws]
version = "<0.7.9"
features = ["permessage-deflate", "ssl"]
